Fix wrong positioned css regarding the progress marker

--- a/src/styles/scss/_pagecontent.scss
+++ b/src/styles/scss/_pagecontent.scss
@@ -2,10 +2,7 @@
   max-width: 1000px;
   transition: 0.25s;
   z-index: -1;
-  div:first-child {
-    padding-bottom: 2em;
-  }
-  }
+}
 
 .h5p-digibook-content{
   margin: 1rem;
@@ -33,6 +30,7 @@
   display:flex;
   align-items: center;
   padding: 2em 0;
+  margin-top: 2em;
   border-top: 1px solid #bebebe;
   input[type=checkbox] {
     transform: scale(1.5);
